# DevOpsTraining-backend

./: Dockerfile
.github/workflows/: django_app.yml
backend/: settings.py  urls.py
core/: health_check.py  mixins.py
core/docker_entrypoints/: run_backend.sh
features/: models.py  views.py
poetry/: pyproject.toml
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
