[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["KajetanJanusz <kajtek.k.janusz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
psycopg2-binary = "2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-freezegun = "^0.4.2"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
